umol-models-graph/tests/smiles_parsing/snapshots/smiles_parsing__smiles_parsing_suite__run_conformance_test@indigo_3243_CCOc1ccc2NC(C)(C)C=C_.smiles.snap
---
source: umol-models-graph/tests/smiles_parsing/mod.rs
expression: results
---
expected_category: opensmiles_strict
category: opensmiles_strict
opensmiles_strict:
  success: true
  summary:
    sum_formula: C14NO
    atom_count: 16
    bond_count: 17
